--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h2>By Argentina Programa</h2>
+        <h2>By Argentina Programa Version 2</h2>
         <nav class="nav-dark">
             <a href="" class="link-active"> Home <i class="material-icons ml-10">add</i></a>
             <a href="" class="link-active"> Product <i class="material-icons ml-10">add</i></a>
